# nerf-glasses

./: .gitattributes  Dockerfile  NVIDIA-OptiX-SDK-7.4.0-linux64-x86_64.sh  Readme.md  docker-compose.yml  requirements.txt
nerf_mesh_renderer/: CMakeLists.txt
nerf_mesh_renderer/assets/meshes/glasses/: glasses.gltf
nerf_mesh_renderer/dependencies/: CMakeLists.txt  flythrough_camera.h
nerf_mesh_renderer/dependencies/glad/: gl.h
nerf_mesh_renderer/dependencies/imgui/: CMakeLists.txt
nerf_mesh_renderer/dependencies/spdlog/: common.h
nerf_mesh_renderer/src/: camera.cpp  camera.h  common.cpp  common.h  cuda_output_buffer.cuh  cuda_texture.cu  cuda_texture.cuh  floatyremover.h  gltf_mikktspace_handler.cpp  gltf_scene.cpp  gltf_scene.h  main.cu  nerf_mesh_renderer.cu  nerf_mesh_renderer.cuh  orbit_camera.h  python_api.cu
nerf_mesh_renderer/src/ngp/: adam_optimizer.h  bounding_box.cuh  json_binding.h  nerf.cuh  nerf_loader.cu  nerf_loader.cuh  nerf_network.cuh  ngp_common.cuh  random_val.cuh  render_buffer.cu  render_buffer.cuh  testbed.cu  testbed.cuh  thread_pool.cpp  thread_pool.h  trainable_buffer.cuh
nerf_mesh_renderer/src/optix/: optix_scene.cu  optix_scene.cuh  optix_util.cuh
volume/: imgui.ini  reference_landmarks.npy  render.py  train.py
volume/datasets/alice/: base.msgpack  transforms.json
